fix (remove) content slider parallax scrolling on iphone

--- a/assets/scss/custom/template-parts/homepage/_content-slider.scss
+++ b/assets/scss/custom/template-parts/homepage/_content-slider.scss
@@ -36,12 +36,6 @@
     }
   }
 
-  &[data-parallax="true"] {
-    .content-slider-post {
-      background-attachment: fixed;
-    }
-  }
-
   .content-slider-post {
     padding-block: 95px;
     background-repeat: no-repeat;
@@ -174,4 +168,10 @@
       position: static;
     }
   }
+}
+
+body:not(.ios)
+  .content-slider-container[data-parallax="true"]
+  .content-slider-post {
+  background-attachment: fixed;
 }
